[#747] Ensure model name is mandatory for ItemDefinition types